fix(Mobile): Fix scrolling getting stuck on iOS PWA

--- a/src/assets/styles/media.less
+++ b/src/assets/styles/media.less
@@ -100,7 +100,7 @@
 
     #conversation {
         top: 3.05rem !important;
-        bottom: 6.5rem !important;
+        bottom: 5.8rem !important;
     }
 
     #conversation .circle-icon {
